--- a/SensorsABTestTests/数据格式说明.md
+++ b/SensorsABTestTests/数据格式说明.md
@@ -1,5 +1,5 @@
 #  数据格式说明
-### 后台返回试验结果数据
+### 一期后台返回试验结果数据
 ```
 {
     "status": "SUCCESS", 查询结果标志（SUCCESS:进行试验；FAILED:不进入试验）
@@ -18,12 +18,53 @@
 }
 ```
 
+### 二期试验结果数据结构
+```
+{
+    "status": "SUCCESS",                  // 查询结果标志（SUCCESS:进行试验；FAILED:不进入试验）
+    "error_type": "XXX_ERROR",            // 错误类型，请求结果为 FAILED 时返回
+    "error":"xxxxxx",                     // 错误描述信息
+    "results":
+     [
+         {
+            "abtest_experiment_id":"100"          // 试验 ID
+            "abtest_experiment_group_id":"123",  // 试验分组 ID
+            "is_control_group":false,     // 是否是对照组
+            "is_white_list": true,        // 是否白名单用户，白名单用户不进行试验事件的上报
+            "variables": [
+                {
+                    "name": "color1",
+                    "value": "1",       // 变量值
+                    "type": "INTEGER"    // 变量类型 INTEGER
+                },
+                {
+                    "name": "color2",
+                    "value": "111",       // 变量值
+                    "type": "STRING"    // 变量类型 STRING
+                },
+                {
+                    "name": "color3",
+                    "value": "true",       // 变量值
+                    "type": "BOOLEAN"    // BOOLEAN
+                },
+                {
+                    "name": "color4",
+                    "value": "{\"a\":\"Hello\",\"b\":\"World\"}",       // 变量值
+                    "type": "JSON"    // 变量类型 JSON
+                }
+            ]
+        }
+    ]
+}
+```
+
 ### 请求试验结果的 body 参数
 ```
 {
     "login_id": "123456",                // 登录 ID （有则传）
     "anonymous_id": "匿名 ID",           // 匿名 ID （必传）
     "platform":"Android",               // 请求平台 （必传）Android/iOS/Web/H5
+    "abtest_lib_version": "0.0.1",      // A/B Testing SDK 版本（必传）
     "properties": {
         "$app_version":"v1.2",          // 应用的版本
         "$os":"iOS",                    // 操作系统
@@ -46,3 +87,18 @@ sensorsdata_app_call_js('abtest',"{
 }")
 ```
 
+# 本地缓存数据结构（value 已转成 model）
+```
+key: "paramName"         // 试验参数名
+value: {                  
+        "experimentId":             // 试验 Id
+        "experimentGroupId":        // 试验组 Id
+        "controlGroup":             // 是否为对照组
+        "whiteList":                // 是否为白名单
+        "variable":{                // 具体试验值
+            "paramName":            // 试验参数名
+            "type":                 // 试验结果类型
+            "value":                // 解析后的试验结果
+        }
+    }
+```
