--- a/SensorsABTestTests/数据格式说明.md
+++ b/SensorsABTestTests/数据格式说明.md
@@ -102,3 +102,139 @@ value: {
         }
     }
 ```
+
+
+# 增加 fastFetch 优化功能数据结构
+```
+{
+    "status": "SUCCESS",                  // 查询结果标志（SUCCESS:进行试验；FAILED:不进入试验）
+    "error_type": "XXX_ERROR",            // 错误类型，请求结果为 FAILED 时返回
+    "error":"xxxxxx",                     // 错误描述信息
+    "fuzzy_experiments": ["experiment_var1", "experiment_var2"] // 新增参数，未知状态试验列表
+    "results":
+     [
+         {
+            "abtest_experiment_id":"100"          // 试验 ID
+            "abtest_experiment_group_id":"123",  // 试验分组 ID，Trigger 事件时使用
+            "is_control_group":false,     // 是否是对照组，SDK 暂时未使用
+            "is_white_list": true,        // 是否白名单用户，白名单用户不进行试验事件的上报
+            "variables": [
+                {
+                    "name": "color1",
+                    "value": 1,       // 变量值
+                    "type": "INTEGER"    // 变量类型 INTEGER，没有浮点型
+                },
+                {
+                    "name": "color2",
+                    "value": "111",       // 变量值
+                    "type": "STRING"    // 变量类型 STRING
+                }
+            ]
+        }
+    ]
+}
+
+
+# 支持 track 配置化，新版 SaaS 数据结构
+```
+{
+    "status": "SUCCESS",
+    "results":
+    [
+        {
+            "abtest_experiment_id": "1011",
+            "abtest_experiment_group_id": "3",
+            "is_control_group": false,
+            "is_white_list": false,
+            "experiment_type": "CODE",
+            "variables":
+            [
+                {
+                    "name": "cqs_os",
+                    "type": "STRING",
+                    "value": "windows"
+                }
+            ],
+            "abtest_unique_id": "10110103",
+            "subject_id": "iOS自定义主体Id",
+            "subject_name": "CUSTOM",
+            "abtest_version": "1",
+            "stickiness": "STICKINESS"
+        },
+        {
+            "abtest_experiment_id": "1012",
+            "abtest_experiment_group_id": "1",
+            "is_control_group": false,
+            "is_white_list": true,
+            "experiment_type": "CODE",
+            "variables":
+            [
+                {
+                    "name": "cqs_color",
+                    "type": "STRING",
+                    "value": "red"
+                },
+                {
+                    "name": "cqs_index",
+                    "type": "INTEGER",
+                    "value": "1"
+                }
+            ],
+            "abtest_unique_id": "10120101",
+            "subject_id": "AAC58A96-445E-4D12-8028-EC518988AAF2",
+            "subject_name": "DEVICE",
+            "abtest_version": "1",
+            "stickiness": "STICKINESS"
+        },
+        {
+            "abtest_experiment_id": "1007",
+            "abtest_experiment_group_id": "0",
+            "is_control_group": true,
+            "is_white_list": false,
+            "experiment_type": "CODE",
+            "variables":
+            [
+                {
+                    "name": "li",
+                    "type": "INTEGER",
+                    "value": "1"
+                }
+            ],
+            "abtest_unique_id": "10060114",
+            "subject_id": "AAC58A96-445E-4D12-8028-EC518988AAF2",
+            "subject_name": "USER",
+            "abtest_version": "1",
+            "stickiness": "STICKINESS"
+        }
+    ],
+    "track_config":  // 新增事件触发配置，用于控制事件触发逻辑，默认不返回，修改后全量返回
+    {
+        "item_switch": false,
+        "trigger_switch": true,
+        "property_set_switch": false,
+        "trigger_content_ext":
+        [
+            "abtest_experiment_version",
+            "abtest_experiment_result_id"
+        ]
+    },
+    "out_results": // 新增出组记录列表，只返回关键的试验信息，用于上报出组
+    [
+        {
+            "abtest_experiment_id": "335",
+            "abtest_experiment_group_id": "0",
+            "abtest_experiment_result_id": "-1",
+            "subject_id": "AAC58A96-445E-4D12-8028-EC518988AAADSD",
+            "subject_name": "USER",
+            "abtest_version": "1",
+            "variables":
+            [
+                {
+                    "name": "ai"
+                }
+            ]
+        }
+    ]
+}
+
+```
